--- a/candy.css
+++ b/candy.css
@@ -18,4 +18,17 @@ body{
 #mainNavbar .navbar-brand{
     color: #ea1c2c;
 }
+#headingGroup span{
+    color: #ea1c2c;
+}
+#headingGroup h2{
+    font-weight: 100;
+    font-size: 4rem;
+}
+@media (max-width: 1325px){
+    #headingGroup h2{
+        font-weight: 100;
+        font-size: 3rem;
+    }
+}
 
