--- a/candy.css
+++ b/candy.css
@@ -25,6 +25,7 @@ body{
     font-weight: 100;
     font-size: 4rem;
     text-align: center;
+    
 }
 
 #secondGroup h2{
@@ -34,9 +35,21 @@ body{
 }
 #secondGroup p{
     font-weight: 100;
-    font-size: 1.5rem;
-    color: ;
+    font-size: 1.25rem;
+    color: #ff5d8f;
+    line-height: 2.0;
 }
+
+.content{
+    margin-top: 100px;;
+}
+
+.navbar.scrolled{
+    background-color: rgb(222, 192, 222);
+    transition: background 500ms;
+
+}
+
 @media (max-width: 1325px){
     #headingGroup h2{
         font-weight: 100;
